# modul34

qt_set/: CMakeLists.txt  main.cpp
untitled/: CMakeLists.txt
